GESTION EXERCICES CORRIGES END

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -36,7 +36,7 @@
                 
                 <div class="span3">
                     <a href="{{ path('msp_frontend_homepage') }}">
-                        <img src="" alt="logo"/>
+                        <img src="{{ asset('apple-touch-icon.png') }}" alt="logo" height="60" width="60"/>
                     </a>
                 </div>
                 
