--- a/src/Msp/FrontendBundle/Resources/views/Question/show.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Question/show.html.twig
@@ -41,6 +41,10 @@
                 <td>{{ entity.date|date('Y-m-d H:i:s') }}</td>
             </tr>
             <tr>
+                <th>QCM</th>
+                <td>{{ entity.qcm }}</td>
+            </tr>
+            <tr>
                 <th>Réponses</th>
                 <th colspan="2">Bonne réponse ?</th>
             </tr>
