--- a/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
@@ -12,11 +12,9 @@
                 <li><a href="{{ path('niveau') }}">NIVEAU</a></li>
                 <li><a href="{{ path('difficulter') }}">DIFFICULTÉ</a></li>
                 <li><a href="{{ path('classe') }}">CLASSE</a></li>
-                <li><a href="{{ path('chapitre') }}">CHAPITRE</a></li>
-                <li><a href="{{ path('exercicecorrige') }}">GESTION CORRIGÉS</a></li>                
-                <li><a href="{{ path('qcm') }}">GESTION QCM</a></li>
-                <li><a href="{{ path('question') }}">QUESTION</a></li>
-                <li><a href="{{ path('reponse') }}">REPONSE</a></li>
+                <li><a href="{{ path('chapitre') }}">GESTION CORRIGÉS</a></li>
+                <li><a href="{{ path('exercicecorrige') }}">EXERCICES CORRIGÉS</a></li>                
+                <li><a href="{{ path('qcm') }}">GESTION QCM</a></li>                
             </ul>
         </div>
     </div>
