--- a/src/Msp/FrontendBundle/Resources/views/ExerciceCorrige/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/ExerciceCorrige/index.html.twig
@@ -17,7 +17,7 @@
 
 
 {% block body -%}
-    <h1>List Exercices Corrigés</h1>
+    <h1>List Exercices Corrigés du chapitre "{{ chapitre }}"</h1>
 
     <table class="table table-hover">
         <thead>
@@ -25,8 +25,8 @@
                 <th>Id</th>
                 <th>Exercice</th>
                 <th>Corrige</th>
-                <th>Urlpdf</th>
-                <th>Urlvideo</th>
+                <th>Url pdf</th>
+                <th>Url video</th>
                 <th>Date</th>
                 <th>Actions</th>
             </tr>
@@ -37,16 +37,20 @@
                 <td><a href="{{ path('exercicecorrige_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.exercice }}</td>
                 <td>{{ entity.corrige }}</td>
-                <td>{{ entity.urlPdf }}</td>
-                <td>{{ entity.urlVideo }}</td>
-                <td>{% if entity.date %}{{ entity.date|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>
+                    {%if entity.urlPdf is not null %}
+                    <a title="Consulter le fichier" href="{{ asset('uploads/exercicescorriges/') }}{{ entity.urlPdf }}" target="_blank"><img src="{{ asset('pdf-icon.png') }}" alt="pdf"></a>
+                    {% endif %}
+                </td>
+                <td><a title="Voir la vidéo" href="{{ entity.urlVideo }}" target="_blank"><i class="icon-film"></i></a></td>
+                <td>{% if entity.date %}{{ entity.date|date('d/m/Y H:i:s') }}{% endif %}</td>
                 <td>
                 <ul class="inline">
                     <li>
-                        <a class="btn" href="{{ path('exercicecorrige_show', { 'id': entity.id }) }}">Voir <i class="icon-align-justify"></i></a>
+                        <a class="btn" href="{{ path('exercicecorrige_show', { 'id': entity.id, 'chapitre': chapitre.id }) }}">Voir <i class="icon-align-justify"></i></a>
                     </li>
                     <li>
-                        <a class="btn" href="{{ path('exercicecorrige_edit', { 'id': entity.id }) }}">Modifier <i class="icon-edit"></i></a>
+                        <a class="btn" href="{{ path('exercicecorrige_edit', { 'id': entity.id, 'chapitre': chapitre.id }) }}">Modifier <i class="icon-edit"></i></a>
                     </li>
                 </ul>
                 </td>
@@ -54,10 +58,27 @@
         {% endfor %}
         </tbody>
     </table>
-
-        <ul class="inline">
+    
+    <div class="pagination">
+        <ul>
+            {# On utilise la fonction range(a, b) qui crée un tableau de
+            valeurs entre a et b #}
+            {% for p in range(1, nb_pages) %}
+            <li{% if p == page %} class="active"{% endif %}>
+                <a href="{{ path('departement', {'page': p}) }}">{{ p }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+    
+    <ul class="inline">
         <li>
-            <a class="btn" href="{{ path('exercicecorrige_new') }}">
+            <a class="btn" href="{{ path('chapitre') }}">
+                <i class="icon-chevron-left"></i> Retour à la liste des chapitres
+            </a>
+        </li>
+        <li>
+            <a class="btn" href="{{ path('exercicecorrige_new', { 'chapitre': chapitre.id }) }}">
                 Ajouter un exercice corrigé <i class="icon-chevron-right"></i>
             </a>
         </li>
