--- a/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
@@ -12,8 +12,10 @@
                 <li><a href="{{ path('niveau') }}">NIVEAU</a></li>
                 <li><a href="{{ path('difficulter') }}">DIFFICULTÉ</a></li>
                 <li><a href="{{ path('classe') }}">CLASSE</a></li>
-                <li><a href="{{ path('chapitre') }}">GESTION CORRIGÉS</a></li>                               
-                <li><a href="{{ path('qcm') }}">GESTION QCM</a></li>                
+                <li><a href="{{ path('eleve') }}">Gestion des Elèves</a></li>
+                <li><a href="{{ path('professeur') }}">Gestion des Professeurs</a></li>
+                <li><a href="{{ path('chapitre') }}">Gestion des Corrigés</a></li>                               
+                <li><a href="{{ path('qcm') }}">Gestion des QCM</a></li>                
             </ul>
         </div>
     </div>
