--- a/src/Msp/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,7 +1,7 @@
 {% extends "MspUserBundle::layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
-{% block title %}INSCRIPTION | {{ parent() }}{% endblock %}
+{% block title %}AJOUTER UN MEMBRE | {{ parent() }}{% endblock %}
 {# La description de la page (defaut vide) #}
 {% block description %}{% endblock %}
 {# Les mots clés de la page (defaut vide) #}
@@ -10,19 +10,32 @@
 {% block robots %}noindex, nofollow{% endblock %}
 
 {# Le titre de l'entête du document #}
-{% block entetetitle %}INSCRIPTION | {{ parent() }}{% endblock %}
+{% block entetetitle %}AJOUTER UN MEMBRE | {{ parent() }}{% endblock %}
 {# La barre latéralke de la page #}
 {% block aside %}{{ parent() }}{% endblock %}
 
 {% block fos_user_content %}
 
 <header>        
-    <h1>INSCRIPTION</h1>        
+    <h1>AJOUTER UN MEMBRE</h1>        
 </header>
 
 <div>
     {% include "MspUserBundle:Registration:register_content.html.twig" %}
 </div>   
+
+<ul class="unstyled nav-pills nav-stacked">
+    <li>
+        <a class="btn" href="{{ path('eleve') }}">
+            <i class="icon-chevron-left"></i> Retour à la liste des élèves
+        </a>
+    </li>
+    <li>
+        <a class="btn" href="{{ path('professeur') }}">
+            <i class="icon-chevron-left"></i> Retour à la liste des professeurs
+        </a>
+    </li>
+</ul>
 
 {% endblock fos_user_content %}
 
