--- a/web/css/style.css
+++ b/web/css/style.css
@@ -6199,3 +6199,27 @@ h1.titre{font-size: 12px; line-height: 12px;}
           border-radius: 6px;
 }
 
+.fos_user_registration_register label.fos_user_registration_form_roles_0 { display:none; }
+
+/* Style pour le tri */
+.sortable {width:980px; border-left:1px solid #c6d5e1; border-top:1px solid #c6d5e1; border-bottom:none; margin:0 auto 15px}
+.sortable th {background:#597d98; text-align:left; color:#cfdce7; border:1px solid #fff; border-right:none}
+.sortable th h3 {font-size: 18px; padding:0 8px; line-height: 18px;}
+.sortable td {padding:4px 6px 6px; border-bottom:1px solid #c6d5e1; border-right:1px solid #c6d5e1}
+.sortable .head h3 {background:url(/img/sorter/sort.gif) 7px center no-repeat; cursor:pointer; padding-left:18px}
+.sortable .desc, .sortable .asc {background:#254762;}
+.sortable .desc h3 {background:url(/img/sorter/desc.gif) 7px center no-repeat; cursor:pointer; padding-left:18px}
+.sortable .asc h3 {background:url(/img/sorter/asc.gif) 7px  center no-repeat; cursor:pointer; padding-left:18px}
+.sortable .head:hover, .sortable .desc:hover, .sortable .asc:hover {color:#fff}
+.sortable .evenrow td {background:#fff}
+.sortable .oddrow td {background:#ecf2f6}
+.sortable td.evenselected {background:#ecf2f6}
+.sortable td.oddselected {background:#dce6ee}
+
+#controls {width:100%; margin:0 auto; height:20px}
+#perpage {float:left; width:30%; line-height: 30px;}
+#perpage select {float:left; font-size:11px; width: 30%;}
+#perpage span {float:left; margin:2px 0 0 5px}
+#navigation {float:left; width:40%; text-align:center; line-height: 30px;}
+#navigation img {cursor:pointer}
+#text {float:left; width:30%; text-align:right; margin-top:2px; line-height: 30px;}
