--- a/src/Msp/FrontendBundle/Resources/views/professeur-layout.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/professeur-layout.html.twig
@@ -11,7 +11,8 @@
                 <li><a href="#">EDITION PROFIL</a></li>
                 <li><a href="#">Gestion TICKETS</a></li>
                 <li><a href="#">FICHE DE PAIE</a></li>      
-                <li><a href="#">BILAN MENSUEL</a></li>                
+                <li><a href="#">BILAN MENSUEL</a></li>
+                <li><a href="{{ path('msp_professeur_conference') }}">GESTION CONFERENCE</a></li>
             </ul>
         </div>
     </div>
