--- a/src/Msp/FrontendBundle/Resources/views/User/professeur.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/User/professeur.html.twig
@@ -1,7 +1,7 @@
 {% extends "MspFrontendBundle::professeur-layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
-{% block title %}PROFESSEUR {{ app.user.prenom }} {{ app.user.nom }} | {{ parent() }}{% endblock %}
+{% block title %}PROFESSEUR "{{ app.user.prenom }} {{ app.user.nom }}" | {{ parent() }}{% endblock %}
 {# La description de la page (defaut vide) #}
 {% block description %}{% endblock %}
 {# Les mots clés de la page (defaut vide) #}
@@ -10,7 +10,7 @@
 {% block robots %}noindex, nofollow{% endblock %}
 
 {# Le titre de l'entête du document #}
-{% block entetetitle %}PROFESSEUR| {{ app.user.prenom }} {{ app.user.nom }} {{ parent() }}{% endblock %}
+{% block entetetitle %}PROFESSEUR "{{ app.user.prenom }} {{ app.user.nom }}" | {{ parent() }}{% endblock %}
 {# La barre latéralke de la page #}
 {% block aside %}{{ parent() }}{% endblock %}
 {# Le contenu de la page #}
