--- a/web/css/style.css
+++ b/web/css/style.css
@@ -6223,3 +6223,5 @@ h1.titre{font-size: 12px; line-height: 12px;}
 #navigation {float:left; width:40%; text-align:center; line-height: 30px;}
 #navigation img {cursor:pointer}
 #text {float:left; width:30%; text-align:right; margin-top:2px; line-height: 30px;}
+
+#conference input[type=text], #conference input[type=password] { width:90%; }
