--- a/src/Msp/UserBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Registration/confirmed.html.twig
@@ -21,7 +21,7 @@
         <h1>INSCRIPTION TERMINÉE</h1>        
     </header>
 
-    <p class="alert alert-success">{{ 'registration.confirmed'|trans({'%username%': user.username}, 'FOSUserBundle') }}</p>
+    <p class="alert alert-success">Félicitation, Le nouveau compte est maintenant activé.</p>
     {% if app.session is not empty %}
         {% set targetUrl = app.session.get('_security.' ~ app.security.token.providerKey ~ '.target_path') %}
         {% if targetUrl is not empty %}<p><a href="{{ targetUrl }}">{{ 'registration.back'|trans({}, 'FOSUserBundle') }}</a></p>{% endif %}
