--- a/src/Msp/FrontendBundle/Resources/views/Professeur/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Professeur/index.html.twig
@@ -45,6 +45,9 @@
                     <li>
                         <a class="btn" href="{{ path('professeur_edit', { 'id': entity.id }) }}">Modifier <i class="icon-edit"></i></a>
                     </li>
+                    <li>
+                        <a class="btn" href="{{ path('professeur_taux', { 'id': entity.id }) }}">Gérer Taux <i class="icon-edit"></i></a>
+                    </li>
                 </ul>
                 </td>
             </tr>
