--- a/src/Msp/FrontendBundle/Resources/views/Question/edit.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Question/edit.html.twig
@@ -41,3 +41,8 @@
     </li>
 </ul>
 {% endblock %}
+    
+{% block javascripts2 %}
+    {{ parent() }}   
+    <script type="text/javascript" src="{{ asset('javascript/question.js') }}"></script>
+{% endblock %}
