--- a/web/css/style.css
+++ b/web/css/style.css
@@ -6199,7 +6199,7 @@ h1.titre{font-size: 12px; line-height: 12px;}
           border-radius: 6px;
 }
 
-.fos_user_registration_register label.fos_user_registration_form_roles_0 { display:none; }
+#fos_user_registration_form_roles label { display:none; }
 
 /* Style pour le tri */
 .sortable {width:980px; border-left:1px solid #c6d5e1; border-top:1px solid #c6d5e1; border-bottom:none; margin:0 auto 15px}
@@ -6225,3 +6225,5 @@ h1.titre{font-size: 12px; line-height: 12px;}
 #text {float:left; width:30%; text-align:right; margin-top:2px; line-height: 30px;}
 
 #conference input[type=text], #conference input[type=password] { width:90%; }
+
+.table td.text-center { text-align: center; }
