--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -154,7 +154,7 @@
         
         {% block javascripts1 %}
         {# inclusion de la librairie de jquery #}
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>            
+        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->            
         {% endblock %}
         
         {% block javascripts2 %}
