--- a/src/Msp/FrontendBundle/Resources/views/ExerciceCorrige/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/ExerciceCorrige/index.html.twig
@@ -65,7 +65,7 @@
             valeurs entre a et b #}
             {% for p in range(1, nb_pages) %}
             <li{% if p == page %} class="active"{% endif %}>
-                <a href="{{ path('departement', {'page': p}) }}">{{ p }}</a>
+                <a href="{{ path('exercicecorrige', {'page': p}) }}">{{ p }}</a>
             </li>
             {% endfor %}
         </ul>
