--- a/src/Msp/FrontendBundle/Resources/views/Navbar/professeur.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Navbar/professeur.html.twig
@@ -2,7 +2,7 @@
     <div class="navbar-inner">
         <ul class="nav">
             <li class="active"><a href="{{ path('msp_professeur', { slug: app.user.slug } ) }}"><i class="icon-user"></i></a></li>
-            <li><a href="#">Gestion PLANNING</a></li>
+            <li><a href="{{ path('msp_professeur_planning', { slug: app.user.slug }) }}">Gestion PLANNING</a></li>
             <li><a href="{{ path('fos_user_profile_edit') }}">EDITION PROFIL</a></li>
             <li><a href="#">Gestion TICKETS</a></li>
             <li><a href="#">FICHE DE PAIE</a></li>      
