--- a/src/Msp/FrontendBundle/Resources/views/Page/universite.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/universite.html.twig
@@ -1,7 +1,7 @@
 {% extends "MspFrontendBundle::layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
-{% block title %}UNIVERSIÉ | {{ parent() }}{% endblock %}
+{% block title %}UNIVERSITÉ | {{ parent() }}{% endblock %}
 {# La description de la page (defaut vide) #}
 {% block description %}{% endblock %}
 {# Les mots clés de la page (defaut vide) #}
@@ -10,7 +10,7 @@
 {% block robots %}noindex, nofollow{% endblock %}
 
 {# Le titre de l'entête du document #}
-{% block entetetitle %}UNIVERSIÉ | {{ parent() }}{% endblock %}
+{% block entetetitle %}UNIVERSITÉ | {{ parent() }}{% endblock %}
 {# La barre latéralke de la page #}
 {% block aside %}{{ parent() }}{% endblock %}
 {% block universite %}
@@ -25,7 +25,7 @@
 {# Le contenu de la page #}
 {% block content %}
     <article class="span9">
-        <h1>UNIVERSIÉ</h1>
+        <h1>UNIVERSITÉ</h1>
     </article>    
 {% endblock %}{# empty Twig template #}
 {# empty Twig template #}
