--- a/web/css/main.css
+++ b/web/css/main.css
@@ -65,3 +65,5 @@ h1.titre{font-size: 12px; line-height: 12px;}
 #text {float:left; width:30%; text-align:right; margin-top:2px; line-height: 30px;}
 
 #conference input[type=text], #conference input[type=password] { width:90%; }
+
+.table td.text-center { text-align: center; }
