END RAPPORT TICKET ELEVE

--- a/src/Msp/FrontendBundle/Resources/views/Navbar/professeur.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Navbar/professeur.html.twig
@@ -4,10 +4,10 @@
             <li class="active"><a href="{{ path('msp_professeur', { slug: app.user.slug } ) }}"><i class="icon-user"></i></a></li>
             <li><a href="{{ path('msp_professeur_planning', { slug: app.user.slug }) }}">Gestion PLANNING</a></li>
             <li><a href="{{ path('fos_user_profile_edit') }}">EDITION PROFIL</a></li>
-            <li><a href="#">Gestion TICKETS</a></li>
-            <li><a href="#">FICHE DE PAIE</a></li>      
-            <li><a href="#">BILAN MENSUEL</a></li>
             <li><a href="{{ path('msp_professeur_conference') }}">GESTION CONFERENCE</a></li>
+            <li><a href="{{ path('msp_professeur_ticket') }}">Gestion TICKETS</a></li>
+            <li><a href="#">FICHE DE PAIE</a></li>      
+            <li><a href="#">BILAN MENSUEL</a></li>           
         </ul>
     </div>
 </div>
