--- a/src/Msp/FrontendBundle/Resources/views/Navbar/eleve.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Navbar/eleve.html.twig
@@ -5,7 +5,7 @@
             <li><a href="{{ path('fos_user_profile_edit') }}">EDITION PROFIL</a></li>
             <li><a href="{{ path('msp_eleve_corriges') }}">CORRIGÉS</a></li>
             <li><a href="{{ path('msp_eleve_qcm') }}">QCM</a></li>
-            <li><a href="#">RAPPORT TICKETS</a></li>                
+            <li><a href="{{ path('msp_eleve_ticket') }}">RAPPORT TICKETS</a></li>                
         </ul>
     </div>
 </div>
