END BILAN MENSUEL AND FICHE PAIE

--- a/src/Msp/FrontendBundle/Resources/views/User/eleve_ticket_ajouter.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/User/eleve_ticket_ajouter.html.twig
@@ -27,7 +27,7 @@
     <ul class="inline">
         <li>
              <a class="btn" href="{{ path('msp_eleve_ticket') }}">
-                Retour Rapport Ticket <i class="icon-chevron-left"></i>
+                <i class="icon-chevron-left"></i> Retour Rapport Ticket 
             </a>
         </li>
     </ul>
