--- a/src/Msp/FrontendBundle/Resources/views/Navbar/professeur.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Navbar/professeur.html.twig
@@ -6,8 +6,8 @@
             <li><a href="{{ path('fos_user_profile_edit') }}">EDITION PROFIL</a></li>
             <li><a href="{{ path('msp_professeur_conference') }}">GESTION CONFERENCE</a></li>
             <li><a href="{{ path('msp_professeur_ticket') }}">Gestion TICKETS</a></li>
-            <li><a href="#">FICHE DE PAIE</a></li>      
-            <li><a href="#">BILAN MENSUEL</a></li>           
+            <li><a href="{{ path('msp_professeur_fiche_paie') }}">FICHE DE PAIE</a></li>      
+            <li><a href="{{ path('msp_professeur_bilan_mensuel') }}">BILAN MENSUEL</a></li>           
         </ul>
     </div>
 </div>
