END ADMIN RAPPORT TICKET, BILAN MENSUEL,DASHBORD

--- a/src/Msp/FrontendBundle/Resources/views/Navbar/admin.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Navbar/admin.html.twig
@@ -1,7 +1,7 @@
 <div class="navbar">
     <div class="navbar-inner">
         <ul class="nav">
-            <li class="active"><a href="{{ path('msp_admin', { slug: app.user.slug}) }}"><i class="icon-user"></i></a></li>
+            <li class="active"><a href="{{ path('msp_admin', { slug: app.user.slug}) }}">Tableau de bord</a></li>
             <li><a href="{{ path('departement') }}">DEPARTEMENT</a></li>
             <li><a href="{{ path('cours') }}">COURS</a></li>
             <li><a href="{{ path('niveau') }}">NIVEAU</a></li>
