--- a/src/Msp/FrontendBundle/Resources/views/Eleve/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Eleve/index.html.twig
@@ -47,6 +47,9 @@
                     <li>
                         <a class="btn" href="{{ path('eleve_edit', { 'id': entity.id }) }}">Modifier <i class="icon-edit"></i></a>
                     </li>
+                    <li>
+                        <a class="btn" href="{{ path('eleve_ticket', { 'id': entity.id }) }}">Rapport Ticket <i class="icon-edit"></i></a>
+                    </li>
                 </ul>
                 </td>
             </tr>
