--- a/src/Msp/FrontendBundle/Resources/views/Professeur/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Professeur/index.html.twig
@@ -32,7 +32,7 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('eleve_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                <td><a href="{{ path('professeur_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.nom }} {{ entity.prenom }}</td>
                 <td>{{ entity.departement }}</td>
                 <td>{{ entity.ville }}</td>                
@@ -47,6 +47,9 @@
                     </li>
                     <li>
                         <a class="btn" href="{{ path('professeur_taux', { 'id': entity.id }) }}">Gérer Taux <i class="icon-edit"></i></a>
+                    </li>
+                    <li>
+                        <a class="btn" href="{{ path('professeur_bilan_mensuel', { 'id': entity.id }) }}">Bilan Mensuel <i class="icon-edit"></i></a>
                     </li>
                 </ul>
                 </td>
