END ADMIN FICHE DE PAIE

--- a/src/Msp/FrontendBundle/Resources/views/Professeur/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Professeur/index.html.twig
@@ -51,6 +51,9 @@
                     <li>
                         <a class="btn" href="{{ path('professeur_bilan_mensuel', { 'id': entity.id }) }}">Bilan Mensuel <i class="icon-edit"></i></a>
                     </li>
+                    <li>
+                        <a class="btn" href="{{ path('professeur_fiche_paie', { 'id': entity.id }) }}">Fiche Paie <i class="icon-edit"></i></a>
+                    </li>
                 </ul>
                 </td>
             </tr>
