--- a/src/Msp/FrontendBundle/Resources/views/Professeur/fiche_paie.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Professeur/fiche_paie.html.twig
@@ -74,7 +74,9 @@
             </a>
         </li>
         <li>
-            <a class="btn" href="#">Imprimer Fiche de Paie <i class="icon-print"></i></a>
+            <a class="btn" href="#" onclick="window.open('{{ path("ms_pdf_fiche_paie", { id: user.id}) }}'); return false;">
+                Imprimer Fiche de Paie <i class="icon-print"></i>
+            </a>
         </li>
     </ul>
     
