--- a/src/Msp/FrontendBundle/Resources/views/Professeur/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Professeur/index.html.twig
@@ -49,10 +49,10 @@
                         <a class="btn" href="{{ path('professeur_taux', { 'id': entity.id }) }}">Gérer Taux <i class="icon-edit"></i></a>
                     </li>
                     <li>
-                        <a class="btn" href="{{ path('professeur_bilan_mensuel', { 'id': entity.id }) }}">Bilan Mensuel <i class="icon-edit"></i></a>
+                        <a class="btn" href="{{ path('professeur_bilan_mensuel', { 'id': entity.id }) }}">Bilan Mensuel <i class="icon-align-justify"></i></a>
                     </li>
                     <li>
-                        <a class="btn" href="{{ path('professeur_fiche_paie', { 'id': entity.id }) }}">Fiche Paie <i class="icon-edit"></i></a>
+                        <a class="btn" href="{{ path('professeur_fiche_paie', { 'id': entity.id }) }}">Fiche Paie <i class="icon-align-justify"></i></a>
                     </li>
                 </ul>
                 </td>
