--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -24,29 +24,24 @@
         
     </head>
     <body>    
-        <div class="container">
-            <header class="span12">
+        <div class="container-fluid">
+            
+            <header>
                 
-                <h1 class="span12 text-center titre">{% block entetetitle %}MathSup{% endblock %}</h1>
+                <h1 class="titre hide">{% block entetetitle %}MathSup{% endblock %}</h1>
                 
-                <div class="span3">
-                    <a href="{{ path('msp_frontend_homepage') }}">
-                        <img src="{{ asset('apple-touch-icon.png') }}" alt="logo" height="60" width="60"/>
-                    </a>
-                </div>
-                
-                <div class="span8">
+                <div class="entete" >
                     
-                    <adress class="span8 text-right">
-                        RENSEIGNEMENTS ET INSCRIPTION AU <strong>01 42 30 50 11</strong>
-                    </adress>
-                                                           
-                    <nav class="span8">
-                        <ul class="nav nav-pills pull-right">
-                            <li><a href="{{ path('msp_qui_sommes_nous') }}">QUI SOMMES NOUS?</a></li>
-                            <li><a href="{{ path('msp_contact') }}">CONTACT</a></li>
+                    <a class="logo" href="{{ path('msp_frontend_homepage') }}">
+                        <img src="{{ asset('/img/logo.png') }}" alt="logo" height="31" width="116"/>
+                    </a>
+                        
+                    <nav id="menu">
+                        
+                        <ul>
+                            <li><a href="{{ path('msp_frontend_homepage') }}">ACCUEIL</a></li>                            
                             <li><a href="{{ path('msp_math_plus') }}">MATH PLUS</a></li>
-                            <li><a href="{{ path('msp_faq') }}">FAQ</a></li>                            
+                            <li><a href="{{ path('msp_contact') }}">CONTACT</a></li>                                                      
                             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                             <li>
                             {# L'utilisateur est-il admin ? #}
@@ -63,72 +58,40 @@
                                 <a href="{{ path('msp_professeur', { slug: app.user.slug }) }}">PROFIL</a>
                             {% endif %}
                             </li>
-                            {% endif %}                            
-                            
+                            {% endif %}
                         </ul>
+                            
                     </nav>
+                    
+                    <ul>
+                        <li><a href="{{ path('fos_user_registration_register') }}"><img src="{{ asset('/img/inscription.png') }}" alt="inscription" /></a></li>
+                        <li>
+                            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                            {# L'utilisateur est connecté ! #}                            
+                            <a class="btn btn-danger" href="{{ path('fos_user_security_logout') }}">Déconnexion</a>
+                            {% else %}
+                            <a href="{{ path('fos_user_security_login') }}"><img src="{{ asset('/img/connexion.png') }}" alt="connexion" /></a>
+                            {% endif %}
+                        </li>
+                    </ul>
                     
                 </div>
                 
+                {% block menuNiveau %}
+                <nav id="menu-niveau">                    
+                    <ul>                        
+                        <li><a href="{{ path('msp_primaire') }}">PRIMAIRE</a></li>                        
+                        <li><a href="{{ path('msp_college') }}">COLLÈGE</a></li>
+                        <li><a href="{{ path('msp_lycee') }}">LYCÉE</a></li>                        
+                        <li><a href="{{ path('msp_universite') }}">UNIVERSITÉ</a></li>
+                        <li><a href="{{ path('msp_institution') }}">INSTITUTION</a></li>
+                    </ul>
+                </nav>
+                {% endblock %}
+                
             </header>
                 
-            <section class="span12">
-                {% block aside %}
-                    <aside class="span2">
-
-                        <ul class="nav nav-list">
-                            
-                            {% block primaire %}
-                            <li><a href="{{ path('msp_primaire') }}">PRIMAIRE</a></li>
-                            {% endblock %}
-                                
-                            {% block college %}
-                            <li>
-                                <a href="{{ path('msp_college') }}">COLLÈGE</a>                                
-                            </li>
-                            {% endblock %}
-                            
-                            {% block lycee %}
-                            <li>
-                                <a href="{{ path('msp_lycee') }}">LYCÉE</a>                                
-                            </li>
-                            {% endblock %}
-
-                            {% block universite %}
-                            <li>
-                                <a href="{{ path('msp_universite') }}">UNIVERSITÉ</a>                                
-                            </li>
-                            {% endblock %}
-
-                            {% block institution %}
-                            <li>
-                                <a href="{{ path('msp_institution') }}">INSTITUTION</a>                               
-                            </li>
-                            {% endblock %}
-                            
-                        </ul>
-                        
-                        <hr/>
-                        
-                        {# L'utilisateur est-il connecté ? #}
-                        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                            {# L'utilisateur est connecté ! #}                            
-                            {% render url("msp_conference_form") %}
-                            <p>
-                                <a class="btn btn-danger btn-block" href="{{ path('fos_user_security_logout') }}">Déconnexion</a>
-                            </p>
-                        {% else %}
-                            <form id="connexion" action="{{ path("fos_user_security_check") }}" method="post">
-                                <fieldset class="text-center">
-                                    <input type="text" id="username" name="_username" class="input-small" placeholder="Login" required="required" />
-                                    <input type="password" id="password" name="_password"  class="input-small" placeholder="Mot de passe" required="required" />
-                                    <input type="submit" id="_submit" class="btn btn-primary" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
-                                </fieldset>
-                            </form>
-                        {% endif %}
-
-                    </aside>
-                {% endblock %}                
+            <section>
                 
                 {% block content %}
                     
@@ -136,17 +99,30 @@
                 
             </section>
                 
-            <footer class="span12">
+            <footer>
                 
-                <ul class="inline pull-right">
-                    <li><a href="{{ path('msp_tarifs') }}">Tarifs</a></li>
-                    <li><a href="{{ path('msp_partenariats') }}">Partenariats</a></li>
-                    <li><a href="{{ path('msp_nos_engagements') }}">Nos engagements</a></li>
-                    <li><a href="{{ path('msp_cgs') }}">CGS</a></li>
-                    <li><a href="{{ path('msp_plan_du_site') }}">Plan du site</a></li>
-                    <li><a href="{{ path('msp_liens') }}">Liens</a></li>
-                    <li>© mathsup.net</li>
-                </ul>
+                <div>
+                    <p>Copyright © 2013, MathSup. Tous droits réservés.</p>
+
+                    <ul>
+                        <li><a href="{{ path('msp_faq') }}">FAQ</a></li> 
+                        <li><a href="{{ path('msp_tarifs') }}">Tarifs</a></li>
+                        <li><a href="{{ path('msp_partenariats') }}">Partenariats</a></li>
+                        <li><a href="{{ path('msp_cgs') }}">CGS</a></li>
+                        <li><a href="{{ path('msp_nos_engagements') }}">Nos engagements</a></li>                        
+                        <li><a href="{{ path('msp_plan_du_site') }}">Plan du site</a></li>
+                        {# L'utilisateur est-il connecté ? #}
+                        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}                        
+                        {# L'utilisateur est-il admin ? #}
+                        {% if is_granted('ROLE_ADMIN') %}
+                        {# L'utilisateur est admin ! #}
+                        <li>
+                            <a href="{{ path('msp_admin', { slug: app.user.slug }) }}">Espace Administrateur <i class=" icon-user icon-white"></i></a>
+                        </li>
+                        {% endif %}                        
+                        {% endif %}     
+                    </ul>
+                </div>
                 
             </footer>           
                 
