--- a/src/Msp/FrontendBundle/Resources/views/Page/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "MspFrontendBundle::layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
-{% block title %}Accueil | {{ parent() }}{% endblock %}
+{% block title %}{{ parent() }} - Et si vous aimiez les maths !{% endblock %}
 {# La description de la page (defaut vide) #}
 {% block description %}{% endblock %}
 {# Les mots clés de la page (defaut vide) #}
@@ -10,12 +10,63 @@
 {% block robots %}noindex, nofollow{% endblock %}
 
 {# Le titre de l'entête du document #}
-{% block entetetitle %}Accueil | {{ parent() }}{% endblock %}
+{% block entetetitle %}{{ parent() }} - Et si vous aimiez les maths !{% endblock %}
 {# La barre latéralke de la page #}
 {% block aside %}{{ parent() }}{% endblock %}
 {# Le contenu de la page #}
 {% block content %}
-    <article class="span9">
-        <h1>Accueil - MathSup</h1>
+    <article class="accueil">
+        <div class="contentheader">
+            <h1>Et si vous aimiez les maths !</h1>
+            <p>
+                MathSup est un site dédié aux cours de mathématiques pour tous les niveaux. De la primaire à 
+                l’université, parents, élèves ou simple curieux, MathSup vous accompagne tout au long de votre 
+                apprentissage.
+            </p>
+        </div>
+            
+        <div class="content">
+            <h2>Nos méthodes</h2>
+            <div>
+                <figure>
+                    <img src="{{ asset('/img/logo_cours_domicile.jpg') }}" alt="" />
+                </figure>
+                <p>
+                    <strong>Cours à domicile</strong>
+                    Cours particuliers à domicile
+                    <a href="#"><img src="{{ asset('/img/en_savoir_plus.jpg') }}" alt="En savoir plus" /></a>
+                </p>
+            </div>
+            <div>
+                <figure>
+                    <img src="{{ asset('/img/logo_cours_distance.jpg') }}" alt="" />
+                </figure>
+                <p>
+                    <strong>Face à face</strong>
+                    Cours particuliers en ligne
+                    <a href="#"><img src="{{ asset('/img/en_savoir_plus.jpg') }}" alt="En savoir plus" /></a>
+                </p>
+            </div>
+            <div>
+                <figure>
+                    <img src="{{ asset('/img/logo_classe_virtuelle.jpg') }}" alt="" />
+                </figure>
+                <p>
+                    <strong>Classe virtuelle</strong>
+                    Cours en ligne (25 élèves)
+                    <a href="#"><img src="{{ asset('/img/en_savoir_plus.jpg') }}" alt="En savoir plus" /></a>
+                </p>
+            </div>
+            
+        </div>
+            
+        <div id="slider">
+            <img class="precedent" title="1" src="{{ asset('/img/slider-left.jpg') }}" alt="" />
+            <div class="slider-handler">
+                <img title="1" src="{{ asset('/img/slider-1_03.jpg') }}" alt="" />                
+            </div>
+            <img class="suivant" title="1" src="{{ asset('/img/slider-right.jpg') }}" alt="" />
+        </div>
+        
     </article>    
 {% endblock %}
