--- a/src/Msp/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,7 +1,7 @@
 {% extends "MspUserBundle::layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
-{% block title %}AJOUTER UN MEMBRE | {{ parent() }}{% endblock %}
+{% block title %}INSCRIPTION | {{ parent() }}{% endblock %}
 {# La description de la page (defaut vide) #}
 {% block description %}{% endblock %}
 {# Les mots clés de la page (defaut vide) #}
@@ -10,20 +10,24 @@
 {% block robots %}noindex, nofollow{% endblock %}
 
 {# Le titre de l'entête du document #}
-{% block entetetitle %}AJOUTER UN MEMBRE | {{ parent() }}{% endblock %}
+{% block entetetitle %}INSCRIPTION | {{ parent() }}{% endblock %}
 {# La barre latéralke de la page #}
 {% block aside %}{{ parent() }}{% endblock %}
 
 {% block fos_user_content %}
 
 <header>        
-    <h1>AJOUTER UN MEMBRE</h1>        
+    <h1>INSCRIPTION</h1>        
 </header>
 
 <div>
     {% include "MspUserBundle:Registration:register_content.html.twig" %}
 </div>   
 
+{# L'utilisateur est-il connecté ? #}
+{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+{# L'utilisateur e le rôle admin ? #}
+{% if is_granted('ROLE_ADMIN') %}
 <ul class="unstyled nav-pills nav-stacked">
     <li>
         <a class="btn" href="{{ path('eleve') }}">
@@ -36,6 +40,7 @@
         </a>
     </li>
 </ul>
-
+{% endif %}
+{% endif %}
 {% endblock fos_user_content %}
 
